--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
 <title> Quiz Demo</title>
 <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
-<h1> Have fun in this quiz</h1>
-<p class="question">Question 1: What is the answer to this question?</p>
-<table class="answer" width="200" border="1">
+<h1>Are You a Fashion Killa?</h1>
+<p class="question">Question 1: Who is the New York based fashion designer on this magazine cover?</p>
+<p class="question"><img src="images/magazine.jpg" width="405" height="530" alt=""/></p>
+<p class="credit">(Design by Zhao Bi)</p>
+<table width="266" height="100" border="1" class="answer">
   <tbody>
     <tr>
-      <td><input type="radio" name="radio" id="a1" value="a1">
-        Answer 1</td>
-      <td><input type="radio" name="radio" id="a2" value="a2">
-        Answer 2</td>
+      <td width="109"><p>
+        <input type="radio" name="radio" id="a1" value="a1">
+        A.Thom Browne</p></td>
+      <td width="141"><input type="radio" name="radio" id="a2" value="a2">
+        B.Thome York </td>
     </tr>
     <tr>
-      <td><input type="radio" name="radio" id="a3" value="a3">
-        Answer 3</td>
+      <td height="34"><input type="radio" name="radio" id="a3" value="a3">
+        C.Thomas Jack</td>
       <td><input type="radio" name="radio" id="a4" value="a4">
-        Answer 4</td>
+        D.Nickia Sober</td>
     </tr>
   </tbody>
 </table>
@@ -31,41 +35,43 @@
   <input type="submit" name="btnSubmit" id="btnSubmit" value="Submit"
   onclick="fSubmit()" /> 
 </p>
-<p class="question">Question 2: What is the answer to this question?</p>
+<p class="question">Question 2: What do the initials of the lifestyle magazine GQ stand for?</p>
+<p class="question"><img src="images/gq.jpeg" width="405" height="530" alt=""/></p>
+<p class="credit">(photo from foter.com) </p>
 <table class="answer" width="200" border="1">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a5" value="a5">
-        Answer 1</td>
-      <td><input type="radio" name="radio" id="a6" value="a6">
-        Answer 2</td>
+      A.General Questions</td>
+      <td><input type="radio" name="radio" id="a6" value="a6">B.Geriatric Queens</td>
     </tr>
     <tr>
       <td><input type="radio" name="radio" id="a7" value="a7">
-        Answer 3</td>
+        C.Gentleman's Quarterly</td>
       <td><input type="radio" name="radio" id="a8" value="a8">
-        Answer 4</td>
+        D.Gender Quality</td>
     </tr>
   </tbody>
 </table>
+<p>&nbsp;</p>
 <p>
   <input type="submit" name="btnSubmit2" id="btnSubmit2" value="Submit"
   onclick="fSubmit2()" />
 </p>
-<p class="question">Question 3: What is the answer to this question?</p>
-<table class="answer" width="200" border="1">
+<p class="question">Question 3:Which brand is the most famous for their red-soled stilettos?</p>
+<p class="question"><img src="images/christian.jpg" width="405" height="530" alt=""/></p>
+<p class="credit">(photo from foter.com)</p>
+<table class="answer" width="282" border="1">
   <tbody>
     <tr>
-      <td><input type="radio" name="radio" id="a9" value="a9">
-        Answer 1</td>
-      <td><input type="radio" name="radio" id="a10" value="a10">
-        Answer 2</td>
+      <td width="153"><input type="radio" name="radio" id="a9" value="a9">
+        A.Christian Louboutin</td>
+      <td width="113"><input type="radio" name="radio" id="a10" value="a10">B.Prada</td>
     </tr>
     <tr>
       <td><input type="radio" name="radio" id="a11" value="a11">
-        Answer 3</td>
-      <td><input type="radio" name="radio" id="a12" value="a12">
-        Answer 4</td>
+        C.Jimmy Choo</td>
+      <td><input type="radio" name="radio" id="a12" value="a12">D.Manolo Blahnik</td>
     </tr>
   </tbody>
 </table>
@@ -73,20 +79,22 @@
   <input type="submit" name="btnSubmit3" id="btnSubmit3" value="Submit"
   onclick="fSubmit3()" />
 </p>
-<p class="question">Question 4: What is the answer to this question?</p>
+<p class="question">Question 4: What does the French world &quot;vogue&quot; mean?</p>
+<p class="question"><img src="images/vogue.jpg" width="405" height="530" alt=""/></p>
+<p class="credit">(photo from vogue.com)</p>
 <table class="answer" width="200" border="1">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a13" value="a1">
-        Answer 1</td>
+        A.sexy</td>
       <td><input type="radio" name="radio" id="a14" value="a2">
-        Answer 2</td>
+        B.fashionista</td>
     </tr>
     <tr>
       <td><input type="radio" name="radio" id="a15" value="a3">
-        Answer 3</td>
+        C.beauty</td>
       <td><input type="radio" name="radio" id="a16" value="a4">
-        Answer 4</td>
+        D.in style</td>
     </tr>
   </tbody>
 </table>
@@ -94,20 +102,22 @@
   <input type="submit" name="btnSubmit4" id="btnSubmit4" value="Submit"
   onclick="fSubmit4()" />
 </p>
-<p class="question">Question 5: What is the answer to this question?</p>
+<p class="question">Question 5: What does the devil wear according to the best title of a 2003 best-selling novel?</p>
+<p class="question"><img src="images/prade.jpg" width="405" height="530" alt=""/></p>
+<p class="credit">(photo from foter.com)</p>
 <table class="answer" width="200" border="1">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a17" value="a1">
-        Answer 1</td>
+        A.Dior</td>
       <td><input type="radio" name="radio" id="a18" value="a2">
-        Answer 2</td>
+      B.Prada</td>
     </tr>
     <tr>
       <td><input type="radio" name="radio" id="a19" value="a3">
-        Answer 3</td>
+        C.Chanel</td>
       <td><input type="radio" name="radio" id="a20" value="a4">
-        Answer 4</td>
+      D.Armani</td>
     </tr>
   </tbody>
 </table>
@@ -115,14 +125,16 @@
   <input type="submit" name="btnSubmit5" id="btnSubmit5" value="Submit"
   onclick="fSubmit5()" />
 </p>
-<p class="question">BOUNS: What is the answer to this question?</p>
+<p class="question">BOUNS: Which building the IU fashion studies department located?</p>
+<p class="question"><img src="images/iu.jpg" width="405" height="530" alt=""/></p>
+<p class="credit">(photo from foter.com)</p>
 <table class="answer" width="200" border="1">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a21" value="a1">
-        Answer 1</td>
+        A.Fine Arts</td>
       <td><input type="radio" name="radio" id="a22" value="a2">
-        Answer 2</td>
+      B.Memorial Hall</td>
     </tr>
     <tr> </tr>
   </tbody>
@@ -131,7 +143,47 @@
   <input type="submit" name="btnSubmit6" id="btnSubmit6" value="Submit"
   onclick="fSubmit6()" />
 </p>
-
+<br>
+<table class="answer" width="365" border="1">
+  <tbody>
+    <tr>
+      <th width="50" height="32" scope="row">score 0</th>
+      <td width="216">Oops!<i class="em em-joy"></i><br>
+      You should grab a magazine to read.</td>
+    </tr>
+    <tr>
+      <th scope="row">score 1-2</th>
+      <td>Good!<i class="em em-blush"></i><br>
+      er,I like your shoes!</td>
+    </tr>
+    <tr>
+      <th scope="row"><p>score 3-4</p></th>
+      <td>Great!<i class="em em-grin"></i><br>
+      Don't you want to be "Damn Daniel"!</td>
+    </tr>
+    <tr>
+      <th height="65" scope="row">score 4-5</th>
+      <td>Terrific!<i class="em em-muscle"></i><br>
+      Give me five!</td>
+    </tr>
+    <tr>
+      <th height="65" scope="row">score 6</th>
+      <td>Fantastic!<i class="em em-necktie"></i><br>
+      if i were a fashion editor, I will hire you!haha!</td>
+    </tr>
+  </tbody>
+</table>
+<p>&nbsp;</p>
+<div id="share-buttons">
+<p class="sharing">Share your score with your friends</p>
+<a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
+        <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+    </a>
+<a href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" target="_blank">
+        <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+    </a>
+  </div>
+   
 <div class="footer">
 <p>&copy; Copyright 2016<br>
 <a href="https://github.com/zhaobi360">Zhao Bi</a>
