--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 <div class="wrapper">
 <h1>Are You a Fashion Killa?</h1>
+<br>
 <p class="question">Question 1: Who is the New York based fashion designer on this magazine cover?</p>
-<p class="question"><img src="images/magazine.jpg" width="405" height="530" alt=""/></p>
+<p class="image"><img src="images/magazine.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(Design by Zhao Bi)</p>
 <table width="266" height="100" border="1" class="answer">
   <tbody>
@@ -36,7 +37,7 @@
   onclick="fSubmit()" /> 
 </p>
 <p class="question">Question 2: What do the initials of the lifestyle magazine GQ stand for?</p>
-<p class="question"><img src="images/gq.jpeg" width="405" height="530" alt=""/></p>
+<p class="image"><img src="images/gq.jpeg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com) </p>
 <table class="answer" width="200" border="1">
   <tbody>
@@ -59,7 +60,7 @@
   onclick="fSubmit2()" />
 </p>
 <p class="question">Question 3:Which brand is the most famous for their red-soled stilettos?</p>
-<p class="question"><img src="images/christian.jpg" width="405" height="530" alt=""/></p>
+<p class="image"><img src="images/christian.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
 <table class="answer" width="282" border="1">
   <tbody>
@@ -80,7 +81,7 @@
   onclick="fSubmit3()" />
 </p>
 <p class="question">Question 4: What does the French world &quot;vogue&quot; mean?</p>
-<p class="question"><img src="images/vogue.jpg" width="405" height="530" alt=""/></p>
+<p class="image"><img src="images/vogue.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from vogue.com)</p>
 <table class="answer" width="200" border="1">
   <tbody>
@@ -103,7 +104,7 @@
   onclick="fSubmit4()" />
 </p>
 <p class="question">Question 5: What does the devil wear according to the best title of a 2003 best-selling novel?</p>
-<p class="question"><img src="images/prade.jpg" width="405" height="530" alt=""/></p>
+<p class="image"><img src="images/prade.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
 <table class="answer" width="200" border="1">
   <tbody>
@@ -126,7 +127,7 @@
   onclick="fSubmit5()" />
 </p>
 <p class="question">BOUNS: Which building the IU fashion studies department located?</p>
-<p class="question"><img src="images/iu.jpg" width="405" height="530" alt=""/></p>
+<p class="image"><img src="images/iu.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
 <table class="answer" width="200" border="1">
   <tbody>
