--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <p class="question">Question 1: Who is the New York based fashion designer on this magazine cover?</p>
 <p class="image"><img src="images/magazine.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(Design by Zhao Bi)</p>
-<table width="266" height="100" border="1" class="answer">
+<table class="answer">
   <tbody>
     <tr>
-      <td width="109"><p>
+      <td><p>
         <input type="radio" name="radio" id="a1" value="a1">
         A.Thom Browne</p></td>
-      <td width="141"><input type="radio" name="radio" id="a2" value="a2">
+      <td><input type="radio" name="radio" id="a2" value="a2">
         B.Thome York </td>
     </tr>
     <tr>
-      <td height="34"><input type="radio" name="radio" id="a3" value="a3">
+      <td><input type="radio" name="radio" id="a3" value="a3">
         C.Thomas Jack</td>
       <td><input type="radio" name="radio" id="a4" value="a4">
         D.Nickia Sober</td>
@@ -39,7 +39,7 @@
 <p class="question">Question 2: What do the initials of the lifestyle magazine GQ stand for?</p>
 <p class="image"><img src="images/gq.jpeg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com) </p>
-<table class="answer" width="200" border="1">
+<table class="answer">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a5" value="a5">
@@ -62,12 +62,12 @@
 <p class="question">Question 3:Which brand is the most famous for their red-soled stilettos?</p>
 <p class="image"><img src="images/christian.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
-<table class="answer" width="282" border="1">
+<table class="answer">
   <tbody>
     <tr>
-      <td width="153"><input type="radio" name="radio" id="a9" value="a9">
+      <td><input type="radio" name="radio" id="a9" value="a9">
         A.Christian Louboutin</td>
-      <td width="113"><input type="radio" name="radio" id="a10" value="a10">B.Prada</td>
+      <td><input type="radio" name="radio" id="a10" value="a10">B.Prada</td>
     </tr>
     <tr>
       <td><input type="radio" name="radio" id="a11" value="a11">
@@ -83,7 +83,7 @@
 <p class="question">Question 4: What does the French world &quot;vogue&quot; mean?</p>
 <p class="image"><img src="images/vogue.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from vogue.com)</p>
-<table class="answer" width="200" border="1">
+<table class="answer">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a13" value="a1">
@@ -106,7 +106,7 @@
 <p class="question">Question 5: What does the devil wear according to the best title of a 2003 best-selling novel?</p>
 <p class="image"><img src="images/prade.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
-<table class="answer" width="200" border="1">
+<table class="answer">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a17" value="a1">
@@ -129,7 +129,7 @@
 <p class="question">BOUNS: Which building the IU fashion studies department located?</p>
 <p class="image"><img src="images/iu.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
-<table class="answer" width="200" border="1">
+<table class="answer">
   <tbody>
     <tr>
       <td><input type="radio" name="radio" id="a21" value="a1">
@@ -137,7 +137,6 @@
       <td><input type="radio" name="radio" id="a22" value="a2">
       B.Memorial Hall</td>
     </tr>
-    <tr> </tr>
   </tbody>
 </table>
 <p>
@@ -145,11 +144,11 @@
   onclick="fSubmit6()" />
 </p>
 <br>
-<table class="answer" width="365" border="1">
+<table class="answer">
   <tbody>
     <tr>
-      <th width="50" height="32" scope="row">score 0</th>
-      <td width="216">Oops!<i class="em em-joy"></i><br>
+      <th scope="row">score 0</th>
+      <td >Oops!<i class="em em-joy"></i><br>
       You should grab a magazine to read.</td>
     </tr>
     <tr>
@@ -163,12 +162,12 @@
       Don't you want to be "Damn Daniel"!</td>
     </tr>
     <tr>
-      <th height="65" scope="row">score 4-5</th>
+      <th scope="row">score 4-5</th>
       <td>Terrific!<i class="em em-muscle"></i><br>
       Give me five!</td>
     </tr>
     <tr>
-      <th height="65" scope="row">score 6</th>
+      <th scope="row">score 6</th>
       <td>Fantastic!<i class="em em-necktie"></i><br>
       if i were a fashion editor, I will hire you!haha!</td>
     </tr>
