--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <input type="submit" name="btnSubmit3" id="btnSubmit3" value="Submit"
   onclick="fSubmit3()" />
 </p>
-<p class="question">Question 4: What does the French world &quot;vogue&quot; mean?</p>
+<p class="question">Question 4: What does the French word &quot;vogue&quot; mean?</p>
 <p class="image"><img src="images/vogue.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from vogue.com)</p>
 <table class="answer">
