--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div class="wrapper">
 <h1>Are You a Fashion Killa?</h1>
 <br>
+<div class="1">
 <p class="question">Question 1: Who is the New York based fashion designer on this magazine cover?</p>
 <p class="image"><img src="images/magazine.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(Design by Zhao Bi)</p>
@@ -32,10 +33,13 @@
     </tr>
   </tbody>
 </table>
+
 <p>
   <input type="submit" name="btnSubmit" id="btnSubmit" value="Submit"
   onclick="fSubmit()" /> 
 </p>
+</div> 
+<div class="2">
 <p class="question">Question 2: What do the initials of the lifestyle magazine GQ stand for?</p>
 <p class="image"><img src="images/gq.jpeg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com) </p>
@@ -58,6 +62,8 @@
   <input type="submit" name="btnSubmit2" id="btnSubmit2" value="Submit"
   onclick="fSubmit2()" />
 </p>
+</div>
+<div class="3">
 <p class="question">Question 3:Which brand is the most famous for their red-soled stilettos?</p>
 <p class="image"><img src="images/christian.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
@@ -79,6 +85,8 @@
   <input type="submit" name="btnSubmit3" id="btnSubmit3" value="Submit"
   onclick="fSubmit3()" />
 </p>
+</div>
+<div class="4">
 <p class="question">Question 4: What does the French word &quot;vogue&quot; mean?</p>
 <p class="image"><img src="images/vogue.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from vogue.com)</p>
@@ -102,6 +110,8 @@
   <input type="submit" name="btnSubmit4" id="btnSubmit4" value="Submit"
   onclick="fSubmit4()" />
 </p>
+</div>
+<div class="5">
 <p class="question">Question 5: What does the devil wear according to the best title of a 2003 best-selling novel?</p>
 <p class="image"><img src="images/prade.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
@@ -125,6 +135,8 @@
   <input type="submit" name="btnSubmit5" id="btnSubmit5" value="Submit"
   onclick="fSubmit5()" />
 </p>
+</div>
+<div class="6">
 <p class="question">BOUNS: Which building the IU fashion studies department located?</p>
 <p class="image"><img src="images/iu.jpg" width="405" height="530" alt=""/></p>
 <p class="credit">(photo from foter.com)</p>
@@ -142,6 +154,7 @@
   <input type="submit" name="btnSubmit6" id="btnSubmit6" value="Submit"
   onclick="fSubmit6()" />
 </p>
+</div>
 <br>
 <table class="answer">
   <tbody>
@@ -174,6 +187,10 @@
 </table>
 
 <div id="share-buttons">
+<p class="sharing">
+  <input type="submit" name="btnSubmit7" id="btnSubmit7" value="check/reset"
+  onclick="fSubmit7()" />
+</p>
 <p class="sharing">Share your score with your friends</p>
 <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
