--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title> Quiz Demo</title>
+<title> Zhao's Quiz</title>
 <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+<script type="text/javascript" src="js/quiz.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -188,8 +189,7 @@
 
 <div id="share-buttons">
 <p class="sharing">
-  <input type="submit" name="btnSubmit7" id="btnSubmit7" value="check/reset" 
-  onclick="fSubmit7()" />
+  <button onclick="myFunction()">Reset/Check</button>
 </p>
 <p class="sharing">Share your score with your friends</p>
 <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
@@ -205,7 +205,6 @@
 <a href="https://github.com/zhaobi360">Zhao Bi</a>
 </p>
 </div>
-<script type="text/javascript" src="js/quiz.js"></script>
 </div>
 
 </body>
